--- a/simulatr/Makefile
+++ b/simulatr/Makefile
@@ -5,9 +5,10 @@ NOMAKEDIR	=	.git% .svn%
 OBJDIR		=	./obj
 
 CC			=	gcc48
-CFLAGS		=	-O2
+CFLAGS		=	-O2 -Wall -DDEBUG -MMD -MP
 
 ALLC		=	$(shell find . -name *.c)
+ALLINC		=	$(subst processor.h, , $(shell find . -name *.h))
 SRCS		=	$(filter-out $(NOMAKEDIR), $(ALLC))
 DIRS		=	$(dir $(SRCS))
 BINDIRS		=	$(addprefix $(OBJDIR)/, $(DIRS))
@@ -30,6 +31,7 @@ default:
 	@[ -d  $(OBJDIR)   ] || mkdir -p $(OBJDIR)
 	@[ -d "$(BINDIRS)" ] || mkdir -p $(BINDIRS)
 	@$(MAKE) all
+	./$(TARGET)
 
 all : $(OBJS) $(TARGET)
 
@@ -42,3 +44,4 @@ $(OBJDIR)/%.o: %.c
 clean:;	@rm -rf $(TARGET) $(TILS) $(OBJDIR)
 
 -include $(DEPS)
+
